--- a/stickyBox.html
+++ b/stickyBox.html
@@ -7,6 +7,7 @@
   <title>Box three with sticky</title>
   <style>
     * {
+      box-sizing: border-box;
       padding: 0;
       margin: 0;
     }
